<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="flamingo_main_activity_title" translatable="false">Flamingo</string>
    <string name="labs_title">Labs</string>
    <string name="labs_summary">Experiments to explore and test ideas. DS development tools</string>
    <string name="design_demos_tools_download_designer_tools_title">Download Designer Tools</string>
    <string name="design_demos_tools_download_designer_tools_summary">To use Color Picker</string>
    <string name="lab_compose_demo_title">Jetpack Compose Sandbox</string>
    <string name="lab_compose_font_configurator_title">Fonts Configurator for Jetpack Compose</string>
    <string name="lab_compose_font_configurator_summary">View fonts rendering with different parameters</string>
    <string name="lab_compose_shadow_title">Shadow Lab</string>
    <string name="lab_compose_shadow_summary">Shadow rendering for different elevations and opacities</string>
    <string name="lab_accessibility_and_testing_title">Accessibility and testing lab</string>
    <string name="lab_accessibility_and_testing_summary">Sandbox for exploring the possibilities of Compose for accessibility to people with disabilities and testing</string>
    <string name="design_demos_tools_debug_overlay_title">Debug Overlay</string>
    <string name="design_demos_tools_debug_overlay_summary">DS mode, in which all components display debug information inside themselves</string>
    <string name="design_demos_tools_debug_overlay_tile_title">Quick settings tile</string>
    <string name="design_demos_tools_debug_overlay_tile_summary">Add a quick settings tile to quick settings in the notification shade to instantly control overlay from any screen</string>
    <string name="add_tile_tutorial_url">https://todoist.com/en/help/articles/add-an-add-task-quick-setting-tile-on-android</string>
    <string name="design_demos_other_category_title">Other</string>
    <string name="design_demos_links_category_title">Useful links</string>
    <string name="design_demos_links_introductory_article_title">Introductory article on Medium</string>
    <string name="design_demos_links_introductory_article_url" translatable="false">https://popovanton0.medium.com/building-a-modern-design-system-using-jetpack-compose-8bd8084e8b0c</string>
    <string name="design_demos_links_theater_videos_title">Youtube-playlist with Theater videos</string>
    <string name="design_demos_links_theater_videos_url" translatable="false">https://www.youtube.com/playlist?list=PLGEKQ_tCWabRme1pUVZJLektqXXfDIW2G</string>
    <string name="design_demos_links_github_repo_title">GitHub repository</string>
    <string name="design_demos_links_github_repo_url" translatable="false">https://github.com/flamingo-ux/flamingo-android</string>
    <string name="design_demos_links_confluence_title">Flamingo space in Confluence</string>
    <string name="design_demos_links_confluence_url" translatable="false">https://confluence.companyname.ru/x/cIMLOwE</string>
    <string name="design_demos_links_confluence_android_title">Android section in Confluence space</string>
    <string name="design_demos_links_confluence_android_url" translatable="false">https://confluence.companyname.ru/x/v4cgegE</string>
    <string name="design_demos_lectures_and_meetups_category_title">Lectures and meetups</string>
    <string name="design_demos_lectures_and_meetups_category_summary">Sorted by date</string>
    <string name="design_demos_lectures_and_meetups_q2_2021_title">Q2 2021 (Android View impl only)</string>
    <string name="design_demos_lectures_and_meetups_q2_2021_url" translatable="false">https://youtu.be/oRbQns82FX4</string>
    <string name="design_demos_lectures_and_meetups_q3_2022_title">Q3 2022 (Jetpack Compose)</string>
    <string name="design_demos_lectures_and_meetups_q3_2022_url" translatable="false">https://youtu.be/QW6lD5ip9xs</string>
    <string name="design_demos_title">Demo of the Design System</string>
    <string name="design_demos_summary">Test screens of the design system. Developers 👨‍💻 should
         familiarize themselves with <b>every</b> demo before using the design system.</string>
    <string name="design_demo_android_view_title">Android View</string>
    <string name="design_demo_android_view_summary">Demo screens that demonstrate deprecated, Android View based implementation of the design system. It is not recommended to use, support of it is severely limited</string>
    <string name="design_demo_palette_colors_title">Color Palette</string>
    <string name="design_demo_theme_colors_title">Theme Colors</string>
    <string name="design_demo_fonts_title">Fonts</string>
    <string name="design_demo_icons_title">Icons</string>
    <string name="design_demo_illustrations_title">Illustrations</string>
    <string name="design_demo_gradients_title">Gradients</string>
    <string name="design_demo_card_elevation_title">Card Elevation Demo</string>
    <string name="design_demo_components_gallery_title">Components Gallery</string>
    <string name="design_demo_components_gallery_summary">List of all design system components with detailed documentation and demo for each component</string>
    <string name="design_demo_theme_demo_title">Theme.Flamingo</string>
    <string name="design_demo_theme_demo_summary">Description of the nuances of applying the theme of the DS and all the attributes</string>
    <string name="demo_alert_message" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="card_demo_docs">В светлой теме, elevation CardView меняет размер тени под CardView.
        В тёмной теме, elevation меняет цвет фона CardView. Цвета есть в коде и в figma.\n\n

        Для получения такого поведения необходимо использовать функцию
        <i>setCardElevationWithBackground()</i>.\n\n

        Следовательно, использование функции <i>androidx.cardview.widget.CardView.setCardElevation()</i>
        и xml-аттрибутов <i>app:cardElevation</i>, <i>app:cardMaxElevation</i> и <i>app:elevation</i>
        <b>ЗАПРЕЩЕНО</b>.</string>
    <string name="fonts_demo_docs">
        Необходимо <b>ВСЕГДА</b> использовать xml-аттрибут <i>style</i> вместо
        <i>android:textAppearance</i>, так как <i>android:textAppearance</i> не поддерживает
        <i>includeFontPadding</i>, <i>firstBaselineToTopHeight</i> и <i>lastBaselineToBottomHeight</i>.\n\n

        Для проверки этого правила был создан custom lint check:
        <i>com.flamingo.lint.TextAppearanceDetector</i> (даже есть автоисправление).\n\n

        Также необходимо отметить, что при использовании xml-аттрибута <i>style</i> со значением
        <i>@style/TextStyle.Flamingo.******</i> атрибуты <i>android:paddingTop</i> и
        <i>android:paddingBottom</i> не имеют силы, так как они перезаписываются атрибутами
        <i>firstBaselineToTopHeight</i> и <i>lastBaselineToBottomHeight</i>.

        Если использовать атрибут <i>style</i> невозможно, то необходимо использовать extension
        function <i>flamingo.TextStyleKt.dsTextStyle</i>. При её
        использовании нельзя устанавливать <code>paddingTop</code> и <code>paddingBottom</code> у
        <code>TextView</code>.
    </string>
    <string name="colors_demo_docs">Внимание! Не использовать цвета напрямую!
        (<i>@color/green_300</i>) По возможности, нужно всегда использовать атрибуты темы
        (<i>?colorPrimary</i> или <i>?android:colorBackground</i>). Использовать цвет напрямую можно
        только, если он будет одним и тем же в светлой и тёмной темах.</string>
    <string name="theme_demo_docs">Корневой <i>view</i> всех экранов, использующих дизайн-систему
        (компоненты и/или атрибуты темы) должен содержать атрибут <i>android:theme</i> и
        <i>android:background</i> (опционально, если фон не меняется в тёмной теме. Не рекомендуется
        применять из-за <a href="https://developer.android.com/topic/performance/rendering/overdraw">overdraw</a>): \n\n
        <font face="monospace">
            &lt;LinearLayout
                android:layout_width=\"match_parent\"
                android:layout_height=\"match_parent\"
                android:theme=\"@style/Theme.Flamingo\"\n
                android:background=\"?android:colorBackground\" /&gt;</font>\n\n

        Атрибуты темы позволяют получать различные ресурсы, отличающиеся в разных темах (светлая,
        тёмная). Поэтому использовать обычные цвета (<i>@color/green_500</i>) напрямую
        <b>ЗАПРЕЩЕНО</b>. Исключение - когда точно известно, что ресурс (цвет, например) будет
        одинаковым и в светлой, и в тёмной темах. \n\n

        Названия атрибутов темы от ресурсов отличаются тем, что атрибуты имеют <i>семантические</i>
        названия, а ресурсы - <i>буквальные (literal)</i>. Например: <i>?colorError</i> - атрибут,
        содержащий цвет, применяемы для обозначения возникшей ошибки, а <i>@color/red_500</i> -
        ресурс, содержащий красный цвет (просто красный, можно применить где угодно без смысловой
        привязки).

        Атрибуты темы можно использовать практически во всех xml-файлах (всегда тестируйте работу
        вашей фичи на эмуляторе с Android 5.0) с одним из следующих способов:
        <font face="monospace">\n1. <b>?android:attr/colorBackground</b>"
2. <b>?attr/colorError</b>"
3. <b>?android:colorBackground</b>"
4. <b>?colorError</b>"\n\n</font>

        Последние 2 способа предпочтительны и используются в проекте в подавляющем большинстве
        случаев, так как они короче.\n\n

        Для получения значения атрибута цвета необходимо использовать функцию
        <i>com.flamingo.utils.resolveColorAttr()</i>.
    </string>
    <string name="theme_demo_attr_type">Type: %s</string>
    <string name="theme_demo_attr_type_and_value">Type: %s, value: %s</string>
    <string name="theme_demo_attr_type_color">color</string>
    <string name="theme_demo_attr_type_other">other</string>
    <string name="no_demos_found_for_component">🚫 Demos not found!\nBuild will fail</string>
    <string name="no_demos_found_for_component_with_view_impl">The component has an Android View implementation containing a demo. A demo for compose implementation will appear in the near future</string>
    <string name="error_while_loading_demos_for_component">An error occurred while loading the demo.\nSee logcat</string>
    <string name="palette_color_demo_introduction">\t\tThis is a live demonstration of the color palettes that are implemented in
        the Compose-based part of the Flamingo Design System.\n\t\tAndroid View-based color palette can be viewed only in the
        library source code.\n\nPress on the color to copy hex value.</string>
    <string name="theme_color_demo_introduction">\t\tThis is a list of theme colors — colors that must be used to construct UI.\n\t\tIt
        is FORBIDDEN to use static palette colors instead of theme colors, except when background is not changing between themes (gradients, images, videos, etc.)</string>
    <string name="palette_color_demo_hex_copied">copied to clipboard</string>
    <string name="accessibility_and_ui_testing_lab_text">This UI element has\nsemantic properties:</string>
    <string name="lab_fonts_configurator_letter_spacing_helper_text">E.g., 0.02 or -0.04</string>
    <string name="lab_fonts_configurator_line_spacing_miltiplier_helper_text">E.g. 1.17 (line height / font size) (40/34)</string>
    <string name="lab_compose_fonts_configurator_config_copied_msg">Font configuration copied to clipboard</string>
    <string name="component_details_demo_section">Demos</string>
    <string name="component_details_figma_section">Figma</string>
    <string name="component_details_docs_section">Documentation</string>
    <string name="licenses_title">Open source licenses</string>
    <string name="flamingo_version">Version of the Flamingo Design System</string>
</resources>